--- a/crud-angular/src/app/app.component.html
+++ b/crud-angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span>
 
-    Crud Angular + + Spring</span>
+    Crud Angular + Dotnet</span>
 </mat-toolbar>
 <router-outlet></router-outlet>
