feat: improve course-form

--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -16,6 +16,10 @@
           <mat-option value="front-end">Front-End</mat-option>
           <mat-option value="back-end">Back-End</mat-option>
           <mat-option value="DevOps">DevOps</mat-option>
+          <mat-option value="O.S.">O.S.</mat-option>
+          <mat-option value="IoT">IoT</mat-option>
+          <mat-option value="Games">Games</mat-option>
+          <mat-option value="Database">Database</mat-option>
         </mat-select>
       </mat-form-field>
 
